src/objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Comments__c</fullName>
        <inlineHelpText>Approval/Rejection Comments Only</inlineHelpText>
        <label>Approval/Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Cancellation_Date__c</fullName>
        <description>The moment that this Change Request was set to status &quot;Cancelled&quot;. This field is populated by the &quot;Change Request Cancelled Timestamp&quot; process.</description>
        <inlineHelpText>The moment that this Change Request was set to status &quot;Cancelled&quot;. This field is populated by the &quot;Change Request Cancelled Timestamp&quot; process.</inlineHelpText>
        <label>CR Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Completion_Approval__c</fullName>
        <description>This is the timestamp of when the Change Request status field is set to &quot;Complete/Ready for Install&quot;. This field is populated by the &quot;Timestamp CR Completion Approval&quot; field update during the &quot;Change Complete Approval&quot; approval process</description>
        <inlineHelpText>This is the timestamp of when the Change Request status field is set to &quot;Complete/Ready for Install&quot;. This field is populated by the &quot;Timestamp CR Completion Approval&quot; field update during the &quot;Change Complete Approval&quot; approval process</inlineHelpText>
        <label>CR Completion Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Completion_Time__c</fullName>
        <description>If CR Original Submit Date is populated and CR Completion Approval is blank, the number of days since CR Original Submit Date. If CR Original Submit Date and CR Completion Approval are populated, the number of days from CR Original Submit Date to CR Completion Approval date</description>
        <formula>IF( ISBLANK( CR_Original_Submit_Date__c ),
   NULL,
/*ELSE*/

   IF( ISBLANK( CR_Completion_Approval__c ),
      TODAY() - DATEVALUE(CR_Original_Submit_Date__c),
   /*ELSE*/
      DATEVALUE(CR_Completion_Approval__c) - DATEVALUE(CR_Original_Submit_Date__c)
   )
)</formula>
        <inlineHelpText>If CR Original Submit Date is populated and CR Completion Approval is blank, days since the CR Original Submit Date. If CR Original Submit Date and CR Completion Approval are populated, days from the CR Original Submit Date to CR Completion Approval date</inlineHelpText>
        <label>CR Completion Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_Original_Submit_Date__c</fullName>
        <description>The date/time that this record was first submitted for approval. This is populated by the &quot;Timestamp CR Original Submit Date&quot; field update that is used in the &quot;Change Request Approval&quot; approval process</description>
        <inlineHelpText>The date/time that this record was first submitted for approval. This is populated by the &quot;Timestamp CR Original Submit Date&quot; field update that is used in the &quot;Change Request Approval&quot; approval process</inlineHelpText>
        <label>CR Original Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Overall_Status__c</fullName>
        <formula>CASE(  Status__c  
            , &apos;Submitted&apos;, &apos;S&apos;
 , &apos;Submitted for Electrical Review&apos;, &apos;S&apos;
 , &apos;Master Electrician Approved&apos;, &apos;S&apos;
 , &apos;Master Electrician Rejected&apos;, &apos;S&apos;
 , &apos;Submitted to Accounting&apos;, &apos;S&apos;
 , &apos;Accounting Rejected&apos;, &apos;S&apos;
 , &apos;Approved/Pending&apos;, &apos;P&apos;
 , &apos;Completion Approval Pending&apos;, &apos;P&apos;
 , &apos;Completion Approval Rejected&apos;, &apos;P&apos;
 , &apos;Completion Pending Accounting&apos;, &apos;P&apos;
 , &apos;Completion Accounting Rejected&apos;, &apos;P&apos;
 , &apos;Complete/Ready for Install&apos;, &apos;C&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR_Overall_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_From__c</fullName>
        <label>Change From</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_To__c</fullName>
        <label>Change To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Comments__c</fullName>
        <label>Completion/Cancellation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_1_Made_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error 1 Made By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Astrum_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_2_Made_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error 2 Made By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Astrum_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <label>Escalation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Admin_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Admin Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipName>Astrum_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Sales_Order__r.Job_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change_1__c</fullName>
        <label>Reason for Change 1</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Shortage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change/Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Pricing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA/Historical Committee/Zoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change_2__c</fullName>
        <label>Reason for Change 2</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Shortage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change/Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Pricing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA/Historical Committee/Zoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rootstock_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rootstock SO</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Astrum_Change_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Electrician Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Electrician Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Approval Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Pending Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Accounting Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete/Ready for Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_1_Detail__c</fullName>
        <label>Type 1 Detail</label>
        <picklist>
            <controllingField>Type_1__c</controllingField>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Manufacturer/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trenching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Mount to Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount to Roof Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Zep to Zep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zep to Non-Zep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease to Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease to Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase to Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_1_Financing_Detail__c</fullName>
        <label>Type 1 Financing Detail</label>
        <picklist>
            <controllingField>Type_1_Detail__c</controllingField>
            <picklistValues>
                <fullName>One-Pay to Low-Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront to One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Enerbank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <label>Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Change</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2_Detail__c</fullName>
        <label>Type 2 Detail</label>
        <picklist>
            <controllingField>Type_2__c</controllingField>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number/Manufacturer/Wattage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trenching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Mount to Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount to Roof Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Zep to Zep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zep to Non-Zep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease to Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease to Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase to Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2_Financing_Detail__c</fullName>
        <label>Type 2 Financing Detail</label>
        <picklist>
            <controllingField>Type_2_Detail__c</controllingField>
            <picklistValues>
                <fullName>One-Pay to Low-Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront to One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Enerbank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Change</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rootstock Work Order</description>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipName>Astrum_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Order__c</columns>
        <columns>Change_From__c</columns>
        <columns>Change_To__c</columns>
        <columns>Error_1_Made_By__c</columns>
        <columns>Reason_for_Change_1__c</columns>
        <columns>Reason_for_Change_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>